# async-sink

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
src/: lib.rs  unfold_state.rs
src/ext/: buffer.rs  close.rs  drain.rs  err_into.rs  fanout.rs  feed.rs  flush.rs  map_err.rs  mod.rs  send.rs  send_all.rs  unfold.rs  with.rs  with_flat_map.rs
src/sync/: mod.rs  mpsc.rs  oneshot.rs
tests/: sink.rs  sink_fanout.rs
