[package]
name = "async-sink"
version = "0.3.0"
edition = "2018"
authors = ["Adam Killam <adammkillam@gmail.com>"]
description = "The asynchronous `Sink` trait for the tokio ecosystem."
license = "MIT"
repository = "https://github.com/amkillam/async-sink"
readme = "README.md"
keywords = ["tokio", "sink", "stream", "asynchronous", "async"]
categories = ["asynchronous", "network-programming", "data-structures"]
homepage = "https://github.com/amkillam/async-sink"
documentation = "https://docs.rs/async-sink"
rust-version = "1.40.0"

[features]
default = ["std", "alloc"]
std = ["either/std"]
alloc = []

[dependencies]
tokio-stream = { version = "^0.1.17", default-features = false, features = [
  "io-util",
] }
tokio = { version = "^1.15.0", default-features = false, features = [
  "sync",
], optional = true }
either = { version = "^1.15.0", default-features = false }

[lib]
name = "async_sink"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
crate-type = ["lib"]
required-features = []
